[DEV] Update composer.json

--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
     },
     "scripts": {
         "dev:start": "robo develop:start",
+        "dev:push": "robo develop:publish",
         "publish:major": "robo production:publish --release major",
         "publish:minor": "robo production:publish --release minor",
         "publish:patch": "robo production:publish --release patch",
