[DEV] Add configuration, logs and storage folders

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,11 @@
 
 .rocketeer/
 bower_components/
+cache/*
+!cache/.gitkeep
 configuration/*
 !configuration/.gitkeep
+!configuration/configuration.default.php
 logs/*
 !logs/.gitkeep
 storage/*
