--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,10 @@
         "php": ">5.6",
         "slim/slim": "^3.0",
         "gabordemooij/redbean": "^4.0",
-        "php-di/slim-bridge": "^1.0"
+        "php-di/slim-bridge": "^1.0",
+        "symfony/event-dispatcher": "*",
+        "monolog/monolog": "^1.0",
+        "goaop/framework": "^2.0"
     },
     "require-dev": {
         "codeception/codeception": "^2.0",
