[DEV] Add Fractal dependency

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "php-di/slim-bridge": "^1.0",
         "symfony/event-dispatcher": "*",
         "monolog/monolog": "^1.0",
-        "goaop/framework": "^2.0"
+        "goaop/framework": "^2.0",
+        "league/fractal": "*"
     },
     "require-dev": {
         "codeception/codeception": "^2.0",
