[DEV] Using includes and excludes for parsing resources

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ cache/*
 !cache/.gitkeep
 configuration/*
 !configuration/.gitkeep
+!configuration/configuration.php
 !configuration/configuration.default.php
 logs/*
 !logs/.gitkeep
