--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,7 @@
 bower_components/
 cache/*
 !cache/.gitkeep
-configuration/*
-!configuration/.gitkeep
-!configuration/configuration.default.php
+configuration/container/config-security.php
 logs/*
 !logs/.gitkeep
 storage/*
