--- a/.gitignore
+++ b/.gitignore
@@ -2,15 +2,13 @@
 
 .rocketeer/
 bower_components/
-cache/*
-!cache/.gitkeep
+cache/
 configuration/*
 !configuration/.gitkeep
 !configuration/configuration.default.php
-logs/*
-!logs/.gitkeep
-storage/*
-!storage/**/.gitkeep
+logs/
+storage/
+!.gitkeep
 vendor/
 
 tests/_output/*
