--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,15 @@
 
 .rocketeer/
 bower_components/
-cache/
+cache/*
+!cache/.gitkeep
 configuration/*
 !configuration/.gitkeep
 !configuration/configuration.default.php
-logs/
-storage/
-!.gitkeep
+logs/*
+!logs/.gitkeep
+storage/*
+!storage/**/.gitkeep
 vendor/
 
 tests/_output/*
