--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -4,9 +4,9 @@
 # Perform tests in browser using the WebDriver or PhpBrowser.
 # If you need both WebDriver and PHPBrowser tests - create a separate suite.
 
-class_name: AcceptanceTester
+actor: AcceptanceTester
 modules:
     enabled:
         - PhpBrowser:
             url: http://localhost/myapp
-        - \Helper\Acceptance
+        - \Test\Helper\Acceptance
