--- a/tests/functional.suite.yml
+++ b/tests/functional.suite.yml
@@ -1,11 +1,20 @@
 # Codeception Test Suite Configuration
 #
-# Suite for functional (integration) tests
+# Suite for functional tests
 # Emulate web requests and make application process them
 # Include one of framework modules (Symfony2, Yii2, Laravel5) to use it
+# Remove this suite if you don't use frameworks
 
-class_name: FunctionalTester
+actor: FunctionalTester
 modules:
     enabled:
-        # add framework module here
-        - \Helper\Functional
+        # add a framework module here
+        - Doctrine2:
+            connection_callback: ['\RJ\PronosticApp\StaticProxy\Persistence', 'getStaticProxyRoot']
+            cleanup: true # All doctrine queries will be wrapped in a transaction, which will be rolled back at the end of each test
+        - \Herloct\Codeception\Module\Slim:
+            container: tests/_data/test-bootstrap.php
+        - REST:
+            depends: \Herloct\Codeception\Module\Slim
+            part: Json
+        - \Test\Helper\Functional
