--- a/tests/unit.suite.yml
+++ b/tests/unit.suite.yml
@@ -1,9 +1,9 @@
 # Codeception Test Suite Configuration
 #
-# Suite for unit (internal) tests.
+# Suite for unit or integration tests.
 
-class_name: UnitTester
+actor: UnitTester
 modules:
     enabled:
         - Asserts
-        - \Helper\Unit
+        - \Test\Helper\Unit
