--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,11 @@
     "description": "Project description",
     "require": {
         "php": "^7.1.3",
+        "javiereguiluz/easyadmin-bundle": "^1.16",
+        "symfony/console": "^3.3",
         "symfony/flex": "^1.0",
         "symfony/framework-bundle": "^3.3",
+        "symfony/web-server-bundle": "^3.3",
         "symfony/yaml": "^3.3"
     },
     "require-dev": {
