--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "symfony/console": "^3.3",
         "symfony/flex": "^1.0",
         "symfony/framework-bundle": "^3.3",
+        "symfony/profiler-pack": "^1.0",
         "symfony/web-server-bundle": "^3.3",
         "symfony/yaml": "^3.3"
     },
@@ -16,9 +17,6 @@
         "symfony/dotenv": "^3.3"
     },
     "config": {
-        "platform": {
-            "php": "7.1.3"
-        },
         "preferred-install": {
             "*": "dist"
         },
@@ -47,13 +45,13 @@
         ]
     },
     "conflict": {
-        "symfony/symfony": "<3.3",
+        "symfony/symfony": "*",
         "symfony/twig-bundle": "<3.3",
         "symfony/debug": "<3.3"
     },
     "extra": {
         "symfony": {
-            "id": "01BNG9XNKQNDFFXJ45VMHQ2CTY",
+            "id": "01BNGSGYACSWVECA3PDJ0Z05XF",
             "allow-contrib": false
         }
     }
