--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -1,6 +1,6 @@
-#easy_admin:
-#    entities:
-#        # List the entity class name you want to manage
-#        - App\Entity\Product
+easy_admin:
+    entities:
+        # List the entity class name you want to manage
+        - App\Entity\Product
 #        - App\Entity\Category
 #        - App\Entity\User
