--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,11 @@
         "symfony/framework-bundle": "^3.3",
         "symfony/profiler-pack": "^1.0",
         "symfony/web-server-bundle": "^3.3",
-        "symfony/yaml": "^3.3"
+        "symfony/yaml": "^3.3",
+        "symfony/dotenv": "^3.3"
     },
     "require-dev": {
-        "symfony/dotenv": "^3.3"
+        "deployer/deployer": "^5.1"
     },
     "config": {
         "preferred-install": {
@@ -34,7 +35,7 @@
     },
     "scripts": {
         "auto-scripts": {
-            "make cache-warmup": "script",
+            "cache:warmup": "symfony-cmd",
             "assets:install --symlink --relative %PUBLIC_DIR%": "symfony-cmd"
         },
         "post-install-cmd": [
