--- a/composer.json
+++ b/composer.json
@@ -5,14 +5,16 @@
     "description": "Project description",
     "require": {
         "php": "^7.1.3",
-        "javiereguiluz/easyadmin-bundle": "^1.16",
+        "javiereguiluz/easyadmin-bundle": "dev-master",
         "symfony/console": "^3.3",
+        "symfony/dotenv": "^3.3",
         "symfony/flex": "^1.0",
         "symfony/framework-bundle": "^3.3",
         "symfony/profiler-pack": "^1.0",
+        "symfony/twig-bridge": "^3.3",
+        "symfony/twig-bundle": "^3.3",
         "symfony/web-server-bundle": "^3.3",
-        "symfony/yaml": "^3.3",
-        "symfony/dotenv": "^3.3"
+        "symfony/yaml": "^3.3"
     },
     "require-dev": {
         "deployer/deployer": "^5.1"
@@ -35,6 +37,9 @@
     },
     "scripts": {
         "auto-scripts": {
+            "cache:clear --no-warmup": "symfony-cmd",
+            "cache:warmup": "symfony-cmd",
+            "assets:install --symlink --relative %PUBLIC_DIR%": "symfony-cmd"
         },
         "post-install-cmd": [
             "@auto-scripts"
